# flowutils

./: Cargo.toml  README.md
examples/: defer.rs  try_pattern.rs  unwrap_pattern.rs
src/: lib.rs
