[package]
name = "flowutils"
version = "0.1.0"
authors = ["elbaro <elbaro@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.8"
syn = {version="1.0.58", features=["full"]}
uuid = {version="0.8.2", features=["v4"]}

[lib]
proc-macro = true
