[package]
name = "flowutils"
version = "0.1.0"
authors = ["elbaro <elbaro@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
description = "A collection of utilities for control fow."
repository = "https://github.com/elbaro/flowutils"
documentation = "https://docs.rs/flowutils"

[dependencies]
anyhow = "1.0.38"
proc-macro2 = "1.0.24"
quote = "1.0.8"
syn = {version="1.0.58", features=["full"]}
uuid = {version="0.8.2", features=["v4"]}

[lib]
proc-macro = true
